feat(02-01): bootstrap session middleware and Passport
- Added SESSION_SECRET to env validation (min 32 chars, required)
- Added OAuth env vars: GOOGLE_CLIENT_ID/SECRET, LINKEDIN_CLIENT_ID/SECRET with callback URLs
- Added email env vars: EMAIL_HOST, EMAIL_PORT, EMAIL_USER, EMAIL_PASSWORD, EMAIL_FROM
- Configured cookie-parser middleware for session cookies
- Created Redis client using ioredis for session storage
- Configured express-session with RedisStore for distributed sessions
- Enabled sliding session expiration (7-day default, httpOnly, sameSite lax)
- Initialized Passport.js for authentication strategies
- Updated docker-compose.yml with SESSION_SECRET for local development
- Updated .env.example with all auth-related environment variables and documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,23 @@ REDIS_PORT=6379
 NODE_ENV=development
 PORT=3001
 FRONTEND_URL=http://localhost:3000
+
+# Authentication - Session secret (REQUIRED - must be at least 32 characters)
+SESSION_SECRET=your-secret-key-minimum-32-characters-long-replace-this
+
+# OAuth - Google (optional during development)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=http://localhost:3001/auth/google/callback
+
+# OAuth - LinkedIn (optional during development)
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+LINKEDIN_CALLBACK_URL=http://localhost:3001/auth/linkedin/callback
+
+# Email - SMTP configuration (optional during development)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_FROM="Maxed-CV" <noreply@maxedcv.com>
