--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - NODE_ENV=development
       - PORT=3001
       - FRONTEND_URL=http://localhost:3000
+      - SESSION_SECRET=local-dev-session-secret-minimum-32-characters-long
     ports:
       - "3001:3001"
     command: npm run start:dev
