feat(02-07): add route protection, verification banner, and dashboard
- Next.js middleware for route protection (redirects unauthenticated users)
- VerificationBanner component for unverified users
- Dashboard page with user info and logout button
- INTERNAL_API_URL env var for Docker networking (middleware server-side calls)
- Updated docker-compose.yml with middleware mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,12 @@ services:
       - ./frontend/app:/app/app:delegated
       - ./frontend/public:/app/public:delegated
       - ./frontend/lib:/app/lib:delegated
+      - ./frontend/middleware.ts:/app/middleware.ts:delegated
       - frontend_node_modules:/app/node_modules
       - frontend_next:/app/.next
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:3001
+      - INTERNAL_API_URL=http://backend:3001
       - WATCHPACK_POLLING=true
     ports:
       - "3000:3000"
